# entropix_mlx

./: .gitignore  README.md  TODO.md  main.py  mcts.py  mlx_attention_sampler.py  mlx_download_weights.py  mlx_generate.py  mlx_main.py  mlx_model.py  mlx_prompts.py  mlx_sampler.py  mlx_server.py  mlx_stats.py  model.py  prompts.py  pyproject.toml  torch_main.py  torch_model.py
frameworks/: local_main.py  main.py
meta_eval/ifeval/: ifeval.yaml
meta_eval/math_hard/: math_hard_0shot_cot.yaml
ui/: package.json
ui/app/: globals.css
ui/components/: MetricsChart.tsx
ui/components/Artifacts/: Sidebar.tsx  SystemPromptSelector.tsx  index.tsx
ui/components/ChatArea/: ChatInput.tsx  MessageContent.tsx  MessageList.tsx  index.tsx
ui/components/ui/: chart.tsx  select.tsx  slider.tsx
ui/types/: chat.ts
