[project]
name = "entropix-local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blobfile>=3.0.0",
    "einops>=0.8.0",
    "fairscale>=0.4.13",
    "flax>=0.9.0",
    "huggingface-hub[cli]>=0.25.1",
    "jax>=0.4.34",
    "ml-dtypes>=0.5.0",
    "mlx>=0.18.0",
    "mlx-lm>=0.19.1",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "rich>=13.9.2",
    "ruff>=0.6.9",
    "setuptools>=75.1.0",
    "tiktoken>=0.8.0",
    "torch>=2.4.1",
    "transformers>=4.45.1",
    "tyro>=0.8.11",
    "lm-eval[api]>=0.4.5",
    "accelerate>=1.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
extend-exclude = ["tests/**"]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Ruff
    "RUF",
]
lint.ignore = [
    "E501",   # ignore line-length (e.g. long docstring)
    "SIM117", # ignore combine with statements (it leads to harder to read code)
]
line-length = 88
indent-width = 4
